[gd_scene load_steps=5 format=3 uid="uid://bkcflwywxj5dl"]

[ext_resource type="Script" uid="uid://ka07ktxn552e" path="res://map/CheckPoint/check_point.gd" id="1_knqyq"]
[ext_resource type="Texture2D" uid="uid://dbkavih6kdosa" path="res://assets/checkpoint/Planet_0003s_0002_Calque-10.png" id="1_ogmo0"]
[ext_resource type="Texture2D" uid="uid://bakpk2wiwdwd" path="res://assets/checkpoint/Planet_0003s_0001_mercure_L.png" id="2_knqyq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ujj4"]
size = Vector2(76, 96)

[node name="CheckPoint" type="Node2D" groups=["checkpoints"]]
script = ExtResource("1_knqyq")

[node name="SpriteActive" type="Sprite2D" parent="."]
visible = false
position = Vector2(4, -7)
texture = ExtResource("1_ogmo0")

[node name="SpriteDisable" type="Sprite2D" parent="."]
texture = ExtResource("2_knqyq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3ujj4")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
